# GW2-legendary-overlay

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.js  timers.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PIVOTS.md  ROADMAP.md
docs/superpowers/plans/: 2026-05-26-full-english-display.md  2026-05-28-legendary-tier3.md  (+1 more)
scripts/: update_meta_events.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: achievement_boss_links.json  boss_schedule.json  builds.json  legendary_collections.json  legendary_recipes.json
src-tauri/src/: builds.rs  commands.rs  error.rs  legendary.rs  lib.rs  main.rs
src-tauri/src/api/: auth.rs  client.rs  endpoints.rs  mod.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/db/: repository.rs  schema.rs
src-tauri/src/scorer/: ranking.rs
src-tauri/src/sync/: achievements.rs  engine.rs  inventory.rs  items.rs  mod.rs  progress.rs  skins.rs  wallet.rs  wizardsvault.rs
src-tauri/src/timers/: engine.rs  mod.rs  schedule.rs
src-tauri/tests/: api_integration.rs
src/components/: AchievementsWindow.tsx  ApiKeySetup.tsx  BossTimer.tsx  BossesWindow.tsx  BuildsView.tsx  CatalogView.tsx  EventsTab.tsx  EventsWindow.tsx  MyItemsView.tsx  Overlay.tsx  PinnedPanel.tsx  SearchView.tsx  SettingsPanel.tsx  TodosView.tsx  UpdatePrompt.tsx  WizardsVaultPanel.tsx
src/hooks/: useCollapse.ts  useCrossWindowSync.ts  useHotkeys.ts
src/lib/: format.ts  tauri.ts
src/store/: app.ts  settings.ts
src/styles/: tailwind.css
src/types/: gw2.ts
(+3 files in other folders)
